# name_analysis

./: .gitignore  LICENSE  README.md  main.py  name_frequency_analysis.py  pyproject.toml  run_gui.py  run_tui.py  test_name_frequency_analysis.py
src/name_analysis/: data_analyzer.py  gui.py  name_analysis.py  tui.py
tests/: test_name_analysis.py
