[project]
name = "name-analysis"
version = "0.1.41"
authors = [ {name = "Stephen Bryant", email = "stephen@stephenbryant.net"} ]
description = "An application for viewing and analyzing name data from the SSA"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
requires-python = ">=3.9"
dependencies =  [ "pandas", "requests", "textual", "textual-plotext", "python-levenshtein", "jellyfish" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

